--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -20,3 +20,12 @@ $color-black: rgb(29, 29, 29);
 
 // Color red
 $color-red: #f80000;
+
+// Color white
+$color-white: white;
+
+// Color gray
+$color-gray: #2f2f2f;
+
+// Color green
+$color-green: #00ff7f;
