color-black-dark

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -18,6 +18,9 @@ img {
 // Color black
 $color-black: rgb(29, 29, 29);
 
+// Color black dark
+$color-black-dark: rgb(17, 17, 17);
+
 // Color red
 $color-red: #f80000;
 
