--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -32,3 +32,31 @@ $color-gray: #2f2f2f;
 
 // Color green
 $color-green: #00ff7f;
+
+// Color linear gradient_1
+$color-linear-gradient: linear-gradient(
+  180deg,
+  hsl(354deg 100% 29%) 0%,
+  hsl(18deg 100% 30%) 11%,
+  hsl(29deg 100% 30%) 22%,
+  hsl(40deg 100% 30%) 33%,
+  hsl(51deg 100% 28%) 44%,
+  hsl(64deg 100% 28%) 56%,
+  hsl(81deg 58% 40%) 67%,
+  hsl(107deg 41% 51%) 78%,
+  hsl(140deg 53% 54%) 89%,
+  hsl(163deg 95% 44%) 100%
+);
+
+// Scrollbar barra fissa
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 10px;
+  background-color: $color-gray;
+}
+
+// Scrollbar barra che scorre
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: $color-linear-gradient;
+}
