--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -30,8 +30,14 @@ $color-white: white;
 // Color gray
 $color-gray: #2f2f2f;
 
+// Color gray light
+$color-gray-light: gray;
+
 // Color green
 $color-green: #00ff7f;
+
+// Color yellow
+$color-yellow: yellow;
 
 // Color linear gradient_1
 $color-linear-gradient: linear-gradient(
@@ -60,3 +66,6 @@ $color-linear-gradient: linear-gradient(
   border-radius: 10px;
   background-image: $color-linear-gradient;
 }
+
+// Text Shadow black
+$text-shadow-black: 0 0 5px black;
