--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -69,3 +69,9 @@ $color-linear-gradient: linear-gradient(
 
 // Text Shadow black
 $text-shadow-black: 0 0 5px black;
+
+// ul ol list style none
+ul,
+ol {
+  list-style: none;
+}
